# opensomeip

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  TEST_TRACEABILITY_MATRIX.md  TRACEABILITY_MATRIX.md  TRACEABILITY_SUMMARY.md  test_sd_initialization.cpp
cmake/: README.md
docs/: BUILD.md  CODING_GUIDELINES.md  GATEWAY_REQUIREMENTS.md  INTEGRATION_GUIDE.md  README.md  SETUP_GIT_SUBMODULE.md  SOMEIP_ACCEPTANCE_TEST_PLAN.md  TEST_PLAN_STATUS.md  TEST_REPORTING.md
docs/diagrams/: component_interaction.puml  core_class_diagram.puml  deployment_architecture.puml  rpc_sequence_diagram.puml  safety_architecture.puml  sd_sequence_diagram.puml  system_architecture.puml  transport_class_diagram.puml  v_model_test_strategy.puml
examples/: CMakeLists.txt  README.md
examples/advanced/complex_types/: CMakeLists.txt  README.md  client.cpp  server.cpp
examples/advanced/large_messages/: CMakeLists.txt  README.md  client.cpp  server.cpp
examples/advanced/multi_service/: CMakeLists.txt  README.md  client.cpp  server.cpp
examples/basic/events/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
examples/basic/hello_world/: CMakeLists.txt  README.md  client.cpp  server.cpp
examples/basic/method_calls/: CMakeLists.txt  README.md  client.cpp  server.cpp
examples/infra_test/: README.md
include/: README.md
include/common/: result.h
include/core/: session_manager.h
include/events/: README.md  event_publisher.h  event_subscriber.h  event_types.h
include/rpc/: README.md  rpc_client.h  rpc_server.h  rpc_types.h
include/sd/: README.md  sd_client.h  sd_message.h  sd_server.h  sd_types.h
include/serialization/: serializer.h
include/someip/: message.h  types.h
include/tp/: README.md  tp_manager.h  tp_reassembler.h  tp_segmenter.h  tp_types.h
include/transport/: endpoint.h  tcp_transport.h  transport.h  udp_transport.h
scripts/: README.md  add_copyright_headers.sh  clean_build.sh  fix_clang_tidy_issues.sh  install_dev_tools.sh  run_clang_tidy.sh  run_tests.py  setup_deps.sh  verify_build.sh
src/: CMakeLists.txt  README.md
src/common/: result.cpp
src/core/: session_manager.cpp
src/events/: event_publisher.cpp  event_subscriber.cpp
src/rpc/: rpc_client.cpp  rpc_server.cpp
src/sd/: sd_client.cpp  sd_message.cpp  sd_server.cpp
src/serialization/: serializer.cpp
src/someip/: message.cpp  types.cpp
src/tp/: tp_manager.cpp  tp_reassembler.cpp  tp_segmenter.cpp
src/transport/: endpoint.cpp  tcp_transport.cpp  udp_transport.cpp
tests/: 100_PERCENT_COVERAGE_ANALYSIS.md  CMakeLists.txt  COMPREHENSIVE_TESTING_GUIDE.md  README.md  conformance_test.py  coverage_report.py  integration_test.py  requirements.txt  run_tests.py  setup.py  specification_test.py  test_endpoint.cpp  test_events.cpp  test_integration.py  test_message.cpp  test_rpc.cpp  test_sd.cpp  test_serialization.cpp  test_session_manager.cpp  test_tcp_transport.cpp  test_tp.cpp
tests/integration/: test_echo_integration.py
tests/python/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.py  setup.py  someip_test_framework.py
tests/system/: test_full_stack_integration.py
tools/: README.md
tools/plantuml/: generate_diagrams.sh
